[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-bot"
version = "2.0.0"
description = "tixcraft 自動搶票 + Ticketmaster 監控通知機器人"
requires-python = ">=3.11"
dependencies = [
    "nodriver>=0.30",
    "playwright",
    "playwright-stealth>=2.0.2",
    "ddddocr",
    "httpx>=0.27",
    "tenacity>=9.0",
    "ntplib>=0.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "opencv-python-headless",
    "numpy",
    "discord.py>=2.3",
    "anthropic>=0.40",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
ticket-bot = "ticket_bot.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
